--- a/k3s/deployment.yaml
+++ b/k3s/deployment.yaml
@@ -2,15 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: apache
-  labels:
-    app: apache
 spec:
   replicas: 2
-  strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxSurge: 1
-      maxUnavailable: 0
   selector:
     matchLabels:
       app: apache
@@ -21,6 +14,6 @@ spec:
     spec:
       containers:
       - name: apache
-        image: httpd:2.4.59
+        image: vickylimen1/apache-site:latest
         ports:
         - containerPort: 80
