Update and rename apache-service.yaml to service.yaml

--- a/k3s/service.yaml
+++ b/k3s/service.yaml
@@ -3,9 +3,10 @@ kind: Service
 metadata:
   name: apache
 spec:
-  type: LoadBalancer
   selector:
     app: apache
   ports:
-    - port: 80
-      targetPort: 80
+  - protocol: TCP
+    port: 80
+    targetPort: 80
+  type: LoadBalancer
