--- a/k3s/deployment.yaml
+++ b/k3s/deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: apache
+  name: apache-web
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: apache
+      app: apache-web
   template:
     metadata:
       labels:
-        app: apache
+        app: apache-web
     spec:
       containers:
-      - name: apache
-        image: vickylimen1/apache-site:latest
+      - name: apache-web
+        image: vickylimen1/apache-site:<PLACEHOLDER_TAG>
         ports:
         - containerPort: 80
