--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,6 @@ jobs:
       run: |
         git config user.name "github-actions"
         git config user.email "actions@github.com"
-        git add deployment.yaml
+        git add k3s/deployment.yaml
         git commit -m "Update image to ${SHA}"
         git push
