--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,9 +32,11 @@ jobs:
       run: |
         sed -i "s|image: vickylimen1/apache-site:.*|image: vickylimen1/apache-site:${SHA}|" k3s/deployment.yaml
 
-    - name: Push changes
+    - name: Commit & push updated deployment.yaml
       run: |
         git config user.name "github-actions"
         git config user.email "github-actions@github.com"
+        git add k3s/deployment.yaml
+        git commit -m "Update image to ${SHA}" || echo "No changes to commit"
         git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
         git push
