--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,10 @@ jobs:
         docker build -t vickylimen1/apache-site:$SHA .
         docker push vickylimen1/apache-site:$SHA
         echo "SHA=$SHA" >> $GITHUB_ENV
+        
+    - name: Set Git remote to use PAT
+      run: |
+        git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
 
     - name: Update deployment.yaml with new tag
       run: |
