--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,20 +27,19 @@ jobs:
         docker build -t vickylimen1/apache-site:$SHA .
         docker push vickylimen1/apache-site:$SHA
         echo "SHA=$SHA" >> $GITHUB_ENV
-        
+
     - name: Set Git remote to use PAT
       run: |
         git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
 
     - name: Update deployment.yaml with new tag
       run: |
-        sed -i "s|image: vickylimen1/apache-site:.*|image: vickylimen1/apache-site:${SHA}|" k3s/deployment.yaml
+        sed -i "s|image: vickylimen1/apache-site:.*|image: vickylimen1/apache-site:${{ env.SHA }}|" k3s/deployment.yaml
 
     - name: Commit & push updated deployment.yaml
       run: |
         git config user.name "github-actions"
         git config user.email "github-actions@github.com"
         git add k3s/deployment.yaml
-        git commit -m "Update image to ${SHA}" || echo "No changes to commit"
-        git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
+        git commit -m "Update image to ${{ env.SHA }}" || echo "No changes to commit"
         git push
