--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,14 +33,16 @@ jobs:
         git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
 
     - name: Debug GH_PAT length
-      run: echo "GH_PAT length: ${{ secrets.GH_PAT && secrets.GH_PAT.length || 0 }}"
+      run: |
+        echo "GH_PAT length: ${{ secrets.GH_PAT && secrets.GH_PAT.length || 0 }}"
 
     - name: Update deployment.yaml with new tag
       run: |
         sed -i "s|image: vickylimen1/apache-site:.*|image: vickylimen1/apache-site:${{ env.SHA }}|" k3s/deployment.yaml
 
     - name: Debug remote URL
-      run: echo "Remote URL: https://x-access-token:***@github.com/${{ github.repository }}"
+      run: |
+        echo "Remote URL: https://x-access-token:***@github.com/${{ github.repository }}"
 
     - name: Commit & push updated deployment.yaml
       run: |
