--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,22 +32,19 @@ jobs:
       run: |
         git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
 
-    - name: Debug GH_PAT length
-      run: |
-        echo "GH_PAT length: ${{ secrets.GH_PAT && secrets.GH_PAT.length || 0 }}"
 
     - name: Update deployment.yaml with new tag
       run: |
         sed -i "s|image: vickylimen1/apache-site:.*|image: vickylimen1/apache-site:${{ env.SHA }}|" k3s/deployment.yaml
 
-    - name: Debug remote URL
-      run: |
-        echo "Remote URL: https://x-access-token:***@github.com/${{ github.repository }}"
-
-    - name: Commit & push updated deployment.yaml
+    - name: Configure git to use PAT
       run: |
         git config user.name "github-actions"
         git config user.email "github-actions@github.com"
+        git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
+
+    - name: Commit and push changes
+      run: |
         git add k3s/deployment.yaml
         git commit -m "Update image to ${{ env.SHA }}" || echo "No changes to commit"
-        git push
+        git push origin HEAD:${{ github.ref_name }}
