--- a/k3s/deployment.yaml
+++ b/k3s/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: apache-web
-        image: vickylimen1/apache-site:<PLACEHOLDER_TAG>
+        image: vickylimen1/apache-site:{{ .Values.image.tag }}
         ports:
         - containerPort: 80
