--- a/k3s/deployment.yaml
+++ b/k3s/deployment.yaml
@@ -2,15 +2,16 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: apache-web
+  namespace: apache
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: apache-web
+      app: apache
   template:
     metadata:
       labels:
-        app: apache-web
+        app: apache
     spec:
       containers:
       - name: apache-web
