HPA toegevoegd en limiet voor cpu

--- a/k3s/deployment.yaml
+++ b/k3s/deployment.yaml
@@ -18,3 +18,29 @@ spec:
         image: vickylimen1/apache-site:161cda6
         ports:
         - containerPort: 80
+        resources:
+	        requests:
+            cpu: "100m"
+	          memory: "200Mi"
+	        limits:
+	          cpu: "500m"
+	          memory: "500Mi"
+---
+apiVersion: autoscaling/v2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: apache-hpa
+  namespace: apache
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: apache-deployment-devops
+  minReplicas: 2
+  maxReplicas: 10
+  metrics:
+    - type: Resource
+      resource:
+        name: cpu
+        target:
+          type: Utilization
