--- a/k3s/deployment.yaml
+++ b/k3s/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: apache-web
-        image: vickylimen1/apache-site:b4381dd
+        image: vickylimen1/apache-site:{{ .Values.image.tag }}
         ports:
         - containerPort: 80
         resources:
@@ -35,7 +35,7 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: apache-deployment-devops
+    name: apache
   minReplicas: 2
   maxReplicas: 10
   metrics:
@@ -44,3 +44,4 @@ spec:
         name: cpu
         target:
           type: Utilization
+	  averageUtilization: 70
