--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
         ignore-unfixed: true
         vuln-type: os,library
         severity: CRITICAL,HIGH
-        exit-code: 1  # Fails the job if vulnerabilities are found
+        exit-code: 1
 
     - name: Update deployment.yaml with new image tag
       run: |
