--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Scan Docker image with Trivy
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: 'python:3.7'
+        image-ref: vickylimen1/apache-site:${{ env.SHA }}
         format: table
         ignore-unfixed: true
         vuln-type: os,library
